# adapt_diff

./: .gitignore  LICENSE  README.md  pyproject.toml
adapt_diff/: __init__.py  base.py  device.py  extraction.py  generation.py  registry.py
adapt_diff/adapters/: __init__.py  abu_custom_sd.py  custom_diffusion.py  dmd2_imagenet.py  edm_imagenet.py  gemma4_e2b.py  mscoco_t2i.py
adapt_diff/scripts/: __init__.py  cli.py  downloaders.py
docs/: plan_gemma4_e2b_adapter.md  plan_internal_diffuse_funcs.md
examples/: debug_gemma.py  gemma4_e2b_example.py
tests/: __init__.py  test_generation.py  test_hooks.py  test_masking.py  test_registry.py
tests/adapters/: __init__.py  test_abu_custom_sd.py  test_custom_diffusion.py  test_dmd2_imagenet.py  test_edm_imagenet.py  test_gemma4_e2b.py  test_mscoco_t2i.py
